--- a/resources/style.css
+++ b/resources/style.css
@@ -3,7 +3,6 @@ body {
 }
 
 h1 {
-  font-family: Helvetica;
   font-size: 100px;
   font-weight: bold;
   color: khaki;
@@ -12,32 +11,30 @@ h1 {
 }
 
 h2 {
-  font-family: Helvetica;
   font-size: 32px;
   font-weight: bold;
   color: white;
 }
 
-h2.mediumspringgreen {
+#brushes h2 {
   background-color: mediumspringgreen;
 }
 
-h2.lightcoral {
+#frames h2 {
   background-color: lightcoral;
 }
 
-h2.skyblue {
+#paint h2 {
   background-color: skyblue;
 }
 
 span.price {
-  font-family: Helvetica;
   font-weight: bold;
   color: blue;
 }
 
 nav a {
-  font-family: Helvetica;
+  padding: 12px;
   color: white;
   background-color: black;
   font-weight: bold;
