Replaced non-blocking space padding between <a> elements in the <nav> with margin-left property in the css. Added a 3px outset border in lightgrey to the <a> elements in the <nav> to give a button look.

--- a/resources/style.css
+++ b/resources/style.css
@@ -35,6 +35,8 @@ span.price {
 
 nav a {
   padding: 12px;
+  margin-left: 20px;
+  border: 3px outset lightgrey;
   color: white;
   background-color: black;
   font-weight: bold;
